# bookmarks

./: README.md  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  start-reload.sh  start.sh  test.sh
backend/alembic/: env.py
backend/alembic/versions/: a7513c6c1cfe_initial_revision.py
backend/app/: config.py  main.py  pre_start.py
backend/app/api/: api.py  dependencies.py
backend/app/api/endpoints/: links.py  login.py  tags.py  users.py
backend/app/crud/: __init__.py  base.py  crud_link.py  crud_tag.py  crud_user.py
backend/app/db/: database.py  init_db.py
backend/app/models/: __init__.py  assosiations.py  link.py  tag.py  user.py
backend/app/schemas/: __init__.py  link.py  tag.py  user.py
backend/app/tests/: conftest.py  utils.py
backend/app/tests/api/: test_links.py  test_login.py  test_users.py
backend/app/tests/crud/: test_links.py  test_tags.py  test_users.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/nginx/: nginx.conf  nginx.local.conf
frontend/public/: index.html  manifest.json
frontend/src/: App.js  ShareTarget.jsx  api.js  index.css  index.js  service-worker.js  serviceWorkerRegistration.js  utils.js
frontend/src/components/: AddLinkModal.jsx  ContentRouter.jsx  EditLinkModal.jsx  Home.jsx  LinkCard.jsx  LinkList.jsx  LinksList.jsx  Login.jsx  MainContent.jsx  MainRouter.jsx  SearchBar.jsx  SearchLinksList.jsx  SettingsModal.jsx  Sidebar.jsx  TagLinksList.jsx  TagsInput.jsx  TagsList.jsx  Topbar.jsx
frontend/src/pages/: ArchivedPage.jsx  (+5 more)
(+9 files in other folders)
