[tool.poetry]
name = "pocket"
version = "0.1.0"
description = ""
authors = ["pajecawav <pajecawav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
SQLAlchemy = "^1.3.22"
uvicorn = "^0.13.3"
python-jose = "^3.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = "^0.790"
sqlalchemy-stubs = "^0.3"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
